--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ h1#sneak-peak   {
 #main-content   {
     border: solid grey;
     margin: 1em 0 0 0;
+    min-height: 400px;
 }
 
 #email{
@@ -173,6 +174,10 @@ h1#sneak-peak   {
     padding:.5em ;
 }
 .align-centre   {
+    text-align: center;
+}
+.weekday-box    {
+    padding: .5em 1.8em;
     text-align: center;
 }
 /*HTML*/
