--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,8 @@ h1#sneak-peak   {
     min-height: 400px;
 }
 
-#email{
-    padding: 0;
+#subscribe{
+    padding: .3em;
     margin-top: .3em;
     margin-bottom: .3em;
     border: solid white 1px;
@@ -131,6 +131,9 @@ h1#sneak-peak   {
 .box    {
     padding: 1em;
 }
+.thin-box{
+    padding: .5em;
+}
 .remove-spacing {
     padding: 0;
     margin: 0;
@@ -145,10 +148,11 @@ h1#sneak-peak   {
     color: white;
     background-color: dimgrey;
     border: 1px solid #2c2c2c;
-    float: right;
     padding: .5em;
 }
-
+.float-right    {
+    float: right;
+}
 .button:hover  {
     color: black;
     background-color: white;
@@ -179,6 +183,22 @@ h1#sneak-peak   {
 .weekday-box    {
     padding: .5em 1.8em;
     text-align: center;
+}
+.box-top    {
+    padding-top: 1em;
+}
+.text-enter {
+    border: solid white 1px;
+    background: none;
+    padding: .3em;
+    margin: .3em 0;
+}
+.required   {
+    color: red;
+    padding: .3em;
+    display: inline;
+    background-color: #000000;
+
 }
 /*HTML*/
 
